fix markers on safari

--- a/pateeva/css/style.scss
+++ b/pateeva/css/style.scss
@@ -125,6 +125,7 @@ h2 {
     width: 200px;
     padding: 0;
     margin: 50px auto;
+    list-style-type: none;
     li {
         width: 7px;
         height: 7px;
@@ -133,9 +134,6 @@ h2 {
         cursor: pointer;
         &.slick-active {
             background-color: $clr-purple;
-        }
-        &::marker {
-            content: "";
         }
         button {
             display: none;
